--- a/experiments/server/.env
+++ b/experiments/server/.env
@@ -34,3 +34,16 @@ PORT_69_UDP=69
 # TFTP shared directory
 # Default: [${PWD}/tftp]
 TFTP_DIR=./tftp
+
+
+CONFIG_PATH=/config
+#PHYSICAL INTERFACE OF THE HOST
+HOST_PARENT_INTERFACE=enp0s31f6
+#SUBNET of MACVLAN of the TFTP Container
+TFTP_SUBNET=10.0.15.0/24
+#NETWORK ADDR of MACVLAN of the TFTP Container
+TFTP_NETWORK=10.0.15.0
+#GATEWAY the MACVLAN of the TFTP Container
+TFTP_SUBNET_GATEWAY=10.0.15.1
+#IP of the TFTP Container
+TFTP_HOST_IP=10.0.15.254
