--- a/experiments/server/docker-compose.yml
+++ b/experiments/server/docker-compose.yml
@@ -1,6 +1,17 @@
 version: "3.8"
 name: "livenet"
 
+networks:
+  livenet:
+    driver: macvlan
+    driver_opts:
+      parent: "$HOST_PARENT_INTERFACE"
+    ipam:
+      config:
+        - subnet: "$TFTP_SUBNET"
+          gateway: "$TFTP_SUBNET_GATEWAY"
+
+
 services:
   
   server:
@@ -8,26 +19,37 @@ services:
     #entrypoint: "core_run --debug $WS --save-fs /messages"
     #init: true
     privileged: true
-    restart: unless-stopped
+    #restart: unless-stopped
     build:
       context: .
       dockerfile: Dockerfile
       #target: core
       #args:
       #  - ENV=${ENV}
+      args:
+        CONFIG_PATH: $CONFIG_PATH
+        TFTP_HOST_IP: $TFTP_HOST_IP
+        TFTP_NETWORK: $TFTP_NETWORK
+    env_file:
+      - .env
+    cap_add:
+      - 'NET_ADMIN'
+    ports:
+      - '67:67/udp'
+      - '68:68/udp'
     volumes:
-      - ./tftp:/srv/tftp
+      #- ./tftp:/srv/tftp
       - ./nfs:/nfs 
       - ./etc/exports:/etc/exports
       - ./etc/default/nfs-kernel-server:/etc/default/nfs-kernel-server
-      - ./etc/default/isc-dhcp-server:/etc/default/isc-dhcp-server
-      - ./etc/dhcp/dhcpd.conf:/etc/dhcp/dhcpd.conf
+      #- ./etc/default/isc-dhcp-server:/etc/default/isc-dhcp-server
+      #- ./etc/dhcp/dhcpd.conf:/etc/dhcp/dhcpd.conf
       - ./etc/network/interfaces:/etc/network/interfaces 
     networks:
-      - livenet
+      livenet:
+        ipv4_address: "$TFTP_HOST_IP"
 
 
 
 
-networks:
-  livenet: null
+
