--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -5,21 +5,26 @@ services:
   server:
     image: ${DOCKER_IMAGE}:${DOCKER_TAG}
     env_file: ".env"
-    #container_name: pxe-server
+    #container_name: livenet-server
     privileged: true
+    init: true
     build:
       context: ./src
-    networks:
-      dockervlan:
-        ipv4_address: 10.1.22.9
+    network_mode: host
+    # networks:
+    #   dockervlan:
+    #     ipv4_address: 10.1.22.9
     volumes:
-      - ${TFTP_DIR}:/srv/tftp
+      #- ${TFTP_DIR}:/srv/tftp
       - ${NFS_DIR}:/nfs
+      - ./root:/root
       - ./etc/exports:/etc/exports
       - ./etc/default/nfs-kernel-server:/etc/default/nfs-kernel-server
       - ./etc/default/isc-dhcp-server:/etc/default/isc-dhcp-server
+      - ./etc/default/tftpd-hpa:/etc/default/tftpd-hpa
       - ./etc/dhcp/dhcpd.conf:/etc/dhcp/dhcpd.conf
       - ./etc/network/interfaces:/etc/network/interfaces
+      - ./pxelinux.cfg:/srv/tftp/pxelinux.cfg
 
 networks:
   dockervlan:
@@ -31,4 +36,4 @@ networks:
       config:
         - subnet: "10.1.22.0/24"
           ip_range: "10.1.22.64/26"
-          gateway: "10.1.22.254"
+          gateway: ${GATEWAY}
