--- a/server/etc/dhcp/dhcpd.conf
+++ b/server/etc/dhcp/dhcpd.conf
@@ -1,127 +1,91 @@
-# dhcpd.conf
-#
-# Sample configuration file for ISC dhcpd
-#
-# Attention: If /etc/ltsp/dhcpd.conf exists, that will be used as
-# configuration file instead of this file.
-#
-
-# option definitions common to all supported networks...
-option domain-name "example.org";
-option domain-name-servers ns1.example.org, ns2.example.org;
-
-default-lease-time 600;
-max-lease-time 7200;
-
-# Uncomment the following options to enable bootp to dhcp
-#allow booting;
-#allow bootp;
-
-# The ddns-updates-style parameter controls whether or not the server will
-# attempt to do a DNS update when a lease is confirmed. We default to the
-# behavior of the version 2 packages ('none', since DHCP v2 didn't
-# have support for DDNS.)
 ddns-update-style none;
+authoritative;
 
-# If this DHCP server is the official DHCP server for the local
-# network, the authoritative directive should be uncommented.
-#authoritative;
+option domain-name              "livenet";
+option domain-name-servers      8.8.8.8;
 
-# Use this to send dhcp log messages to a different log file (you also
-# have to hack syslog.conf to complete the redirection).
-#log-facility local7;
+allow bootp;
+allow booting;
 
-# No service will be given on this subnet, but declaring it helps the
-# DHCP server to understand the network topology.
+option option-128 code 128 = string;
+option option-129 code 129 = text;
+ 
+# option space PXE;
+# # Code 1: Multicast IP address of bootfile
+# option PXE.mtftp-ip code 1 = ip-address;
+# # Code 2: UDP port that client should monitor for MTFTP responses
+# option PXE.mtftp-cport code 2 = unsigned integer 16;
+# # Code 3: UDP port that MTFTP servers are using to listen for MTFTP requests
+# option PXE.mtftp-sport code 3 = unsigned integer 16;
+# # Code 4: Number of secondes a client must listen for activity before trying
+# #         to start a new MTFTP transfer
+# option PXE.mtftp-tmout code 4 = unsigned integer 8;
+# option PXE.mtftp-delay code 5 = unsigned integer 8;
+# # Code 5: Number of secondes a client must listen before trying to restart
+# #         a MTFTP transfer
+# option PXE.discovery-control code 6 = unsigned integer 8;
+# option PXE.discovery-mcast-addr code 7 = ip-address;
+set vendor-string = option vendor-class-identifier;
 
-#subnet 10.152.187.0 netmask 255.255.255.0 {
-#}
+# class "PXE" {
+#    match if substring(option vendor-class-identifier, 0, 9) = "PXEClient";
+#    option vendor-class-identifier "PXEClient";
+#    vendor-option-space PXE;
+#    option PXE.mtftp-ip 0.0.0.0;
+# }
 
-# This is a very basic subnet declaration.
+# class "Etherboot" {
+#    match if substring(option vendor-class-identifier, 0, 9) = "Etherboot";
+#    option vendor-class-identifier "Etherboot";
+#    vendor-option-space PXE;
+#    option PXE.mtftp-ip 0.0.0.0;
+# }
 
-#subnet 10.254.239.0 netmask 255.255.255.224 {
-#  range 10.254.239.10 10.254.239.20;
-#  option routers rtr-239-0-1.example.org, rtr-239-0-2.example.org;
-#}
+ # This one line must be outside any bracketed scope
+option arch code 93 = unsigned integer 16;
 
-# This declaration allows BOOTP clients to get dynamic addresses,
-# which we don't really recommend.
+class "LIVENET" {
+    match if (substring(option vendor-class-identifier,0,7) = "LIVENET") or (substring(option vendor-class-identifier,0,9) = "PXEClient") or (substring(option vendor-class-identifier,0,9) = "Etherboot");
+    log ( info, "Packet from PXE or LIVENET client");
 
-#subnet 10.254.239.32 netmask 255.255.255.224 {
-#  range dynamic-bootp 10.254.239.40 10.254.239.60;
-#  option broadcast-address 10.254.239.31;
-#  option routers rtr-239-32-1.example.org;
-#}
+    # if option architecture-type = 00:00 {
+    #   #filename "pxelinux.0";
+    #   filename "http://boot.netboot.xyz/ipxe/netboot.xyz.lkrn";
+    #   } elsif option architecture-type = 00:09 {
+    #   filename "syslinux.efi";
+    #   } elsif option architecture-type = 00:07 {
+    #     # 64bit
+    #     filename "syslinux.efi";
+       
+    #   } 
+      #elsif option architecture-type = 00:06 {
+      #filename "path/to/EFIia32/syslinux.efi";
+    #}
+}
 
-# A slightly different configuration for an internal subnet.
-#subnet 10.5.5.0 netmask 255.255.255.224 {
-#  range 10.5.5.26 10.5.5.30;
-#  option domain-name-servers ns1.internal.example.org;
-#  option domain-name "internal.example.org";
-#  option subnet-mask 255.255.255.224;
-#  option routers 10.5.5.1;
-#  option broadcast-address 10.5.5.31;
-#  default-lease-time 600;
-#  max-lease-time 7200;
-#}
-
-# Hosts which require special configuration options can be listed in
-# host statements.   If no address is specified, the address will be
-# allocated dynamically (if possible), but the host-specific information
-# will still come from the host declaration.
-
-#host passacaglia {
-#  hardware ethernet 0:0:c0:5d:bd:95;
-#  filename "vmunix.passacaglia";
-#  server-name "toccata.example.com";
-#}
-
-# Fixed IP addresses can also be specified for hosts.   These addresses
-# should not also be listed as being available for dynamic assignment.
-# Hosts for which fixed IP addresses have been specified can boot using
-# BOOTP or DHCP.   Hosts for which no fixed address is specified can only
-# be booted with DHCP, unless there is an address range on the subnet
-# to which a BOOTP client is connected which has the dynamic-bootp flag
-# set.
-#host fantasia {
-#  hardware ethernet 08:00:07:26:c0:a5;
-#  fixed-address fantasia.example.com;
-#}
-
-# You can declare a class of clients and then do address allocation
-# based on that.   The example below shows a case where all clients
-# in a certain class get addresses on the 10.17.224/24 subnet, and all
-# other clients get addresses on the 10.0.29/24 subnet.
-
-#class "foo" {
-#  match if substring (option vendor-class-identifier, 0, 4) = "SUNW";
-#}
-
-#shared-network 224-29 {
-#  subnet 10.17.224.0 netmask 255.255.255.0 {
-#    option routers rtr-224.example.org;
-#  }
-#  subnet 10.0.29.0 netmask 255.255.255.0 {
-#    option routers rtr-29.example.org;
-#  }
-#  pool {
-#    allow members of "foo";
-#    range 10.17.224.10 10.17.224.250;
-#  }
-#  pool {
-#    deny members of "foo";
-#    range 10.0.29.10 10.0.29.230;
-#  }
-#}
-
-
-subnet 10.1.22.0 netmask 255.255.255.0 {
-  range 10.1.22.26 10.1.22.30;
-  option domain-name-servers ns1.internal.example.org;
-#  option domain-name "internal.example.org";
+shared-network "clients" {
+  subnet 10.1.22.0 netmask 255.255.255.0 {
   option subnet-mask 255.255.255.0;
-  option routers 10.1.22.1;
-#  option broadcast-address 10.5.5.31;
-  default-lease-time 600;
-  max-lease-time 7200;
+  option routers 10.1.22.254;
+  #default-lease-time 28800;
+  #max-lease-time 86400;
+
+  if (option arch = 00:16) {
+		option vendor-class-identifier "HTTPClient";
+		filename "http://boot.home.kraxel.org/arch-x86_64/grubx64.efi";
+	} else if (option arch = 00:07) {
+		filename "syslinux.efi";
+	} else {
+		filename "pxelinux.0";
+	}
+
+  pool {
+      # restringe il lease solo alla classe LIVENET
+      #allow members of "LIVENET";
+      range 10.1.22.10 10.1.22.100;
+      #filename "/pxelinux.0";
+      next-server 10.1.22.254;
+      option routers 10.1.22.254;
+      }
+  }
 }
