--- a/server/etc/dhcp/dhcpd.conf
+++ b/server/etc/dhcp/dhcpd.conf
@@ -7,8 +7,11 @@ option domain-name-servers      8.8.8.8;
 allow bootp;
 allow booting;
 
-option option-128 code 128 = string;
-option option-129 code 129 = text;
+# option option-128 code 128 = string;
+# option option-129 code 129 = text;
+
+# These settings are required for UEFI boot:
+option arch code 93 = unsigned integer 16; # RFC4578
  
 # option space PXE;
 # # Code 1: Multicast IP address of bootfile
@@ -25,7 +28,7 @@ option option-129 code 129 = text;
 # #         a MTFTP transfer
 # option PXE.discovery-control code 6 = unsigned integer 8;
 # option PXE.discovery-mcast-addr code 7 = ip-address;
-set vendor-string = option vendor-class-identifier;
+#set vendor-string = option vendor-class-identifier;
 
 # class "PXE" {
 #    match if substring(option vendor-class-identifier, 0, 9) = "PXEClient";
@@ -41,27 +44,35 @@ set vendor-string = option vendor-class-identifier;
 #    option PXE.mtftp-ip 0.0.0.0;
 # }
 
- # This one line must be outside any bracketed scope
-option arch code 93 = unsigned integer 16;
 
-class "LIVENET" {
-    match if (substring(option vendor-class-identifier,0,7) = "LIVENET") or (substring(option vendor-class-identifier,0,9) = "PXEClient") or (substring(option vendor-class-identifier,0,9) = "Etherboot");
-    log ( info, "Packet from PXE or LIVENET client");
+option space PXE;
+option PXE.mtftp-ip    code 1 = ip-address;
+option PXE.mtftp-cport code 2 = unsigned integer 16;
+option PXE.mtftp-sport code 3 = unsigned integer 16;
+option PXE.mtftp-tmout code 4 = unsigned integer 8;
+option PXE.mtftp-delay code 5 = unsigned integer 8;
 
-    # if option architecture-type = 00:00 {
-    #   #filename "pxelinux.0";
-    #   filename "http://boot.netboot.xyz/ipxe/netboot.xyz.lkrn";
-    #   } elsif option architecture-type = 00:09 {
-    #   filename "syslinux.efi";
-    #   } elsif option architecture-type = 00:07 {
-    #     # 64bit
-    #     filename "syslinux.efi";
+
+
+
+# class "LIVENET" {
+#     match if (substring(option vendor-class-identifier,0,7) = "LIVENET") or (substring(option vendor-class-identifier,0,9) = "PXEClient") or (substring(option vendor-class-identifier,0,9) = "Etherboot");
+#     log ( info, "Packet from PXE or LIVENET client");
+
+#     # if option architecture-type = 00:00 {
+#     #   #filename "pxelinux.0";
+#     #   filename "http://boot.netboot.xyz/ipxe/netboot.xyz.lkrn";
+#     #   } elsif option architecture-type = 00:09 {
+#     #   filename "syslinux.efi";
+#     #   } elsif option architecture-type = 00:07 {
+#     #     # 64bit
+#     #     filename "syslinux.efi";
        
-    #   } 
-      #elsif option architecture-type = 00:06 {
-      #filename "path/to/EFIia32/syslinux.efi";
-    #}
-}
+#     #   } 
+#       #elsif option architecture-type = 00:06 {
+#       #filename "path/to/EFIia32/syslinux.efi";
+#     #}
+# }
 
 shared-network "clients" {
   subnet 10.1.22.0 netmask 255.255.255.0 {
@@ -70,22 +81,32 @@ shared-network "clients" {
   #default-lease-time 28800;
   #max-lease-time 86400;
 
-  if (option arch = 00:16) {
-		option vendor-class-identifier "HTTPClient";
-		filename "http://boot.home.kraxel.org/arch-x86_64/grubx64.efi";
-	} else if (option arch = 00:07) {
-		filename "syslinux.efi";
-	} else {
-		filename "pxelinux.0";
-	}
+  # if (option arch = 00:16) {
+	# 	option vendor-class-identifier "HTTPClient";
+	# 	filename "http://boot.home.kraxel.org/arch-x86_64/grubx64.efi";
+	# } else if (option arch = 00:07) {
+	# 	filename "syslinux.efi";
+	# } else {
+	# 	filename "pxelinux.0";
+	# }
 
+  if option arch = 00:07 {
+        filename "uefi/grubnetx64.efi";
+  } else if option arch = 00:08 {
+        filename "uefi/grubnetx64.efi";
+  } else if option arch = 00:09 {
+        filename "uefi/grubnetx64.efi";
+  } else {
+        # PXE boot
+        filename "pxelinux.0";
+  }
+  
   pool {
       # restringe il lease solo alla classe LIVENET
       #allow members of "LIVENET";
       range 10.1.22.10 10.1.22.100;
       #filename "/pxelinux.0";
       next-server 10.1.22.254;
-      option routers 10.1.22.254;
       }
   }
 }
