--- a/server/Taskfile.yml
+++ b/server/Taskfile.yml
@@ -51,4 +51,5 @@ tasks:
 
   vm:
     cmds:
-      - qemu-system-x86_64 -smp 2 -m 2048 -enable-kvm -net nic,netdev=net0 -netdev bridge,br=br-livenet,id=net0 -boot n -bios /usr/share/ovmf/x64/OVMF.fd
+      #- qemu-system-x86_64 -smp 2 -m 2048 -enable-kvm -net nic,netdev=net0 -netdev bridge,br=br-livenet,id=net0 -boot n -bios /usr/share/ovmf/x64/OVMF.fd
+      - qemu-system-x86_64 -smp 2 -m 2048 -enable-kvm -net nic,netdev=net0 -netdev bridge,br=br-livenet,id=net0 -boot n -bios external/ipxe/src/bin-x86_64-efi/ipxe.efi
