--- a/server/etc/dhcp/dhcpd.conf
+++ b/server/etc/dhcp/dhcpd.conf
@@ -1,57 +1,88 @@
-ddns-update-style none;
-authoritative;
+option domain-name "livenet";
 
-option domain-name              "livenet";
-option domain-name-servers      8.8.8.8;
+default-lease-time 600;
+max-lease-time 7200;
 
-allow bootp;
 allow booting;
+allow bootp;
 
-# option option-128 code 128 = string;
-# option option-129 code 129 = text;
+# The next paragraph needs to be modified to fit your case
+subnet 10.1.22.0 netmask 255.255.255.0 {
+  range 10.1.22.10 10.1.22.100;
+  option broadcast-address 10.1.22.255;
+  option routers 10.1.22.254;
+  option domain-name-servers 8.8.8.8;
+  next-server 10.1.22.254;
+}
 
-# These settings are required for UEFI boot:
-option arch code 93 = unsigned integer 16; # RFC4578
+
+
+
+# ddns-update-style none;
+# authoritative;
+
+# option domain-name              "livenet";
+# option domain-name-servers      8.8.8.8;
+
+# allow bootp;
+# allow booting;
+
+# # option option-128 code 128 = string;
+# # option option-129 code 129 = text;
+
+# # These settings are required for UEFI boot:
+# option arch code 93 = unsigned integer 16;
  
+# # option space PXE;
+# # # Code 1: Multicast IP address of bootfile
+# # option PXE.mtftp-ip code 1 = ip-address;
+# # # Code 2: UDP port that client should monitor for MTFTP responses
+# # option PXE.mtftp-cport code 2 = unsigned integer 16;
+# # # Code 3: UDP port that MTFTP servers are using to listen for MTFTP requests
+# # option PXE.mtftp-sport code 3 = unsigned integer 16;
+# # # Code 4: Number of secondes a client must listen for activity before trying
+# # #         to start a new MTFTP transfer
+# # option PXE.mtftp-tmout code 4 = unsigned integer 8;
+# # option PXE.mtftp-delay code 5 = unsigned integer 8;
+# # # Code 5: Number of secondes a client must listen before trying to restart
+# # #         a MTFTP transfer
+# # option PXE.discovery-control code 6 = unsigned integer 8;
+# # option PXE.discovery-mcast-addr code 7 = ip-address;
+# #set vendor-string = option vendor-class-identifier;
+
+# # class "PXE" {
+# #    match if substring(option vendor-class-identifier, 0, 9) = "PXEClient";
+# #    option vendor-class-identifier "PXEClient";
+# #    vendor-option-space PXE;
+# #    option PXE.mtftp-ip 0.0.0.0;
+# # }
+
+# # class "Etherboot" {
+# #    match if substring(option vendor-class-identifier, 0, 9) = "Etherboot";
+# #    option vendor-class-identifier "Etherboot";
+# #    vendor-option-space PXE;
+# #    option PXE.mtftp-ip 0.0.0.0;
+# # }
+
+
 # option space PXE;
-# # Code 1: Multicast IP address of bootfile
-# option PXE.mtftp-ip code 1 = ip-address;
-# # Code 2: UDP port that client should monitor for MTFTP responses
+# option PXE.mtftp-ip    code 1 = ip-address;
 # option PXE.mtftp-cport code 2 = unsigned integer 16;
-# # Code 3: UDP port that MTFTP servers are using to listen for MTFTP requests
 # option PXE.mtftp-sport code 3 = unsigned integer 16;
-# # Code 4: Number of secondes a client must listen for activity before trying
-# #         to start a new MTFTP transfer
 # option PXE.mtftp-tmout code 4 = unsigned integer 8;
 # option PXE.mtftp-delay code 5 = unsigned integer 8;
-# # Code 5: Number of secondes a client must listen before trying to restart
-# #         a MTFTP transfer
-# option PXE.discovery-control code 6 = unsigned integer 8;
-# option PXE.discovery-mcast-addr code 7 = ip-address;
-#set vendor-string = option vendor-class-identifier;
 
-# class "PXE" {
-#    match if substring(option vendor-class-identifier, 0, 9) = "PXEClient";
-#    option vendor-class-identifier "PXEClient";
-#    vendor-option-space PXE;
-#    option PXE.mtftp-ip 0.0.0.0;
-# }
-
-# class "Etherboot" {
-#    match if substring(option vendor-class-identifier, 0, 9) = "Etherboot";
-#    option vendor-class-identifier "Etherboot";
-#    vendor-option-space PXE;
-#    option PXE.mtftp-ip 0.0.0.0;
-# }
-
-
-option space PXE;
-option PXE.mtftp-ip    code 1 = ip-address;
-option PXE.mtftp-cport code 2 = unsigned integer 16;
-option PXE.mtftp-sport code 3 = unsigned integer 16;
-option PXE.mtftp-tmout code 4 = unsigned integer 8;
-option PXE.mtftp-delay code 5 = unsigned integer 8;
-
+#   if option arch = 00:07 {
+#         filename "uefi/grubnetx64.efi";
+#   } else if option arch = 00:08 {
+#         filename "uefi/grubnetx64.efi";
+#   } else if option arch = 00:09 {
+#         filename "uefi/grubnetx64.efi";
+#   } else {
+#         # PXE boot
+#         filename "pxelinux.0";
+#   }
+  
 
 
 
@@ -74,39 +105,28 @@ option PXE.mtftp-delay code 5 = unsigned integer 8;
 #     #}
 # }
 
-shared-network "clients" {
-  subnet 10.1.22.0 netmask 255.255.255.0 {
-  option subnet-mask 255.255.255.0;
-  option routers 10.1.22.254;
-  #default-lease-time 28800;
-  #max-lease-time 86400;
+# shared-network "clients" {
+#   subnet 10.1.22.0 netmask 255.255.255.0 {
+#   option subnet-mask 255.255.255.0;
+#   option routers 10.1.22.254;
+#   #default-lease-time 28800;
+#   #max-lease-time 86400;
 
-  # if (option arch = 00:16) {
-	# 	option vendor-class-identifier "HTTPClient";
-	# 	filename "http://boot.home.kraxel.org/arch-x86_64/grubx64.efi";
-	# } else if (option arch = 00:07) {
-	# 	filename "syslinux.efi";
-	# } else {
-	# 	filename "pxelinux.0";
-	# }
+#   # if (option arch = 00:16) {
+# 	# 	option vendor-class-identifier "HTTPClient";
+# 	# 	filename "http://boot.home.kraxel.org/arch-x86_64/grubx64.efi";
+# 	# } else if (option arch = 00:07) {
+# 	# 	filename "syslinux.efi";
+# 	# } else {
+# 	# 	filename "pxelinux.0";
+# 	# }
 
-  if option arch = 00:07 {
-        filename "uefi/grubnetx64.efi";
-  } else if option arch = 00:08 {
-        filename "uefi/grubnetx64.efi";
-  } else if option arch = 00:09 {
-        filename "uefi/grubnetx64.efi";
-  } else {
-        # PXE boot
-        filename "pxelinux.0";
-  }
-  
-  pool {
-      # restringe il lease solo alla classe LIVENET
-      #allow members of "LIVENET";
-      range 10.1.22.10 10.1.22.100;
-      #filename "/pxelinux.0";
-      next-server 10.1.22.254;
-      }
-  }
-}
+#   pool {
+#       # restringe il lease solo alla classe LIVENET
+#       allow members of "LIVENET";
+#       range 10.1.22.10 10.1.22.100;
+#       #filename "/pxelinux.0";
+#       next-server 10.1.22.254;
+#       }
+#   }
+# }
