--- a/server/etc/dhcp/dhcpd.conf
+++ b/server/etc/dhcp/dhcpd.conf
@@ -1,19 +1,88 @@
-option domain-name "livenet";
 
-default-lease-time 600;
-max-lease-time 7200;
+# allow booting;
+# allow bootp;
 
-allow booting;
-allow bootp;
+# option space PXE;
+# option PXE.mtftp-ip    code 1 = ip-address;
+# option PXE.mtftp-cport code 2 = unsigned integer 16;
+# option PXE.mtftp-sport code 3 = unsigned integer 16;
+# option PXE.mtftp-tmout code 4 = unsigned integer 8;
+# option PXE.mtftp-delay code 5 = unsigned integer 8;
+option arch code 93 = unsigned integer 16; # RFC4578
 
-# The next paragraph needs to be modified to fit your case
 subnet 10.1.22.0 netmask 255.255.255.0 {
-  range 10.1.22.10 10.1.22.100;
-  option broadcast-address 10.1.22.255;
-  option routers 10.1.22.254;
-  option domain-name-servers 8.8.8.8;
-  next-server 10.1.22.254;
+        option routers 10.1.22.254;
+        range 10.1.22.10 10.1.22.100;
+        option domain-name-servers 8.8.8.8;
+
+        # class "pxeclients" {
+        #         match if substring (option vendor-class-identifier, 0, 9) = "PXEClient";
+        #         next-server 10.1.22.254;
+                
+        #         # if option arch = 00:06 {
+        #         #         filename "uefi/bootia32.efi";
+        #         # } else if option arch = 00:07 {
+        #         #         filename "pxelinux/bootx64.efi";
+        #         # } else {
+        #         #         filename "pxelinux/pxelinux.0";
+        #         # }
+
+        #       if option arch = 00:07 {
+        #             filename "uefi/grubnetx64.efi";
+        #       } else if option arch = 00:08 {
+        #             filename "uefi/grubnetx64.efi";
+        #       } else if option arch = 00:09 {
+        #             filename "uefi/grubnetx64.efi";
+        #       } else {
+        #             # PXE boot
+        #             filename "pxelinux.0";
+        #       }
+
+        # }
+
+        if (option arch = 00:16) {
+          option vendor-class-identifier "HTTPClient";
+          filename "http://10.1.22.254:8095/uefi/grubx64.efi";
+        } else if (option arch = 00:07) {
+          next-server 10.1.22.254;
+          filename "uefi/grubx64.efi";
+        } else {
+          next-server 10.1.22.254;
+          filename "/pxelinux.0";
+        }
+
+
+        # class "httpclients" {
+        #   match if substring(option vendor-class-identifier, 0, 10) = "HTTPClient";
+        #   option vendor-class-identifier "HTTPClient";
+
+        #   if option arch = 00:10 {
+        #       # x86_64 UEFI HTTP client
+        #       filename "http://10.1.22.254:8095/uefi/grubnetx64.efi";
+        #   }
+        # }
+
+
 }
+
+
+
+# option domain-name "livenet";
+
+# default-lease-time 600;
+# max-lease-time 7200;
+
+# allow booting;
+# allow bootp;
+
+# # The next paragraph needs to be modified to fit your case
+# subnet 10.1.22.0 netmask 255.255.255.0 {
+#   range 10.1.22.10 10.1.22.100;
+#   option broadcast-address 10.1.22.255;
+#   option routers 10.1.22.254;
+#   option domain-name-servers 8.8.8.8;
+#   next-server 10.1.22.254;
+# }
 
 
 
