livenet server vm incipit

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,13 @@
+VM_NAME="livenet-server"
+VM_SIZE=50G
+VM_USERNAME="ubuntu"
+PASSWORD="ubuntu"
+UBUNTU=jammy-server-cloudimg-amd64
+
+
+
+
+
 ################################
 # Environment configuration file
 ################################
@@ -27,7 +37,10 @@ NET_DEV=br_test
 TFTP_DIR=${PWD}/tftp
 
 
-BRIDGE=br-livenet
+BRIDGE=livenet
 
 SERVER_IP=10.1.22.2
 GATEWAY=10.1.22.254
+
+
+
