--- a/server/grub.cfg
+++ b/server/grub.cfg
@@ -12,7 +12,7 @@ set timeout=5
 
 
 menuentry 'memtest' {
-    linux16 /memtest86+.bin
+    linux16 /boot/memtest86+.bin
 }
 
 #menuentry "Ubuntu Desktop 18.04" {
