--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -3,26 +3,27 @@ name: "livenet"
 
 services:
   server:
-    image: ${DOCKER_IMAGE}:${DOCKER_TAG}
+    image: igor_rm:latest
     env_file: ".env"
-    #container_name: livenet-server
+    container_name: livenet-server
     privileged: true
     #init: true
     stop_signal: SIGTERM
     build:
       context: ./src
-    ports:
-      - 8095:8095
-      - 69:69/udp
-      - 49000-49100:49000-49100/udp
-      #- 67:67
-      #- 67:67/udp
-      - 111:111
-      - 111:111/udp
+    # ports:
+    #   - 8095:8095
+    #   - 69:69/udp
+    #   - 49000-49100:49000-49100/udp
+    #   #- 67:67
+    #   #- 67:67/udp
+    #   - 111:111
+    #   - 111:111/udp
     #network_mode: host
-    # networks:
-    #   livenet:
-    #     ipv4_address: ${SERVER_IP}
+    networks:
+      - livenet_macvlan
+      # macvlan0:
+        # ipv4_address: 192.168.123.200
     volumes:
       #- ${TFTP_DIR}:/srv/tftp
       - ${NFS_DIR}:/nfs
@@ -41,15 +42,15 @@ services:
     #   - NET_ADMIN
 
 networks:
-  livenet:
-    #external: true
-    driver: macvlan
-    driver_opts:
-      parent: ${BRIDGE}
-      macvlan_mode: bridge
-    ipam:
-      driver: default
-      config:
-        - subnet: 10.1.22.0/24
-          ip_range: 10.1.22.64/26
-          gateway: ${GATEWAY}
+  livenet_macvlan:
+    external: true
+    # driver: macvlan
+    # driver_opts:
+      # parent: livenet
+      # macvlan_mode: bridge
+    # ipam:
+      # driver: default
+      # config:
+        # - subnet: 192.168.123.0/24
+          # ip_range: 192.168.123.192/27
+          # gateway: 192.168.123.1
