--- a/server/grub.cfg
+++ b/server/grub.cfg
@@ -11,8 +11,8 @@ set menu_color_highlight=black/light-gray
 set timeout=5
 
 
-menuentry 'memtest' {
-    linux16 /boot/memtest86+.bin
+menuentry 'pcmemtest' {
+    linuxefi /boot/pcmemtestx64.efi
 }
 
 #menuentry "Ubuntu Desktop 18.04" {
