--- a/server/images/Taskfile.yml
+++ b/server/images/Taskfile.yml
@@ -17,4 +17,10 @@ tasks:
 
   cli:
     cmds:
-      - docker run --rm -it ${IMAGE} bash
+      #- docker run --name ${IMAGE} -it ${IMAGE} bash
+      - docker start ${IMAGE}
+      - docker exec -it ${IMAGE} bash
+
+  diff:
+    cmds:
+      - docker diff ${IMAGE}
